Mini modifications sur les fichiers